django/django_orm/single_model_orm/Users (Shell).txt
(p3VE) C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals>django-admin startproject single_model_orm

(p3VE) C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals>python manage.py runserver
C:\Users\MyRig\AppData\Local\Programs\Python\Python39\python.exe: can't open file 'C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals\manage.py': [Errno 2] No such file or directory

(p3VE) C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals>cd single_model_orm

(p3VE) C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals\single_model_orm>python manage.py runserver
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 17 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
March 29, 2021 - 19:45:30
Django version 2.2, using settings 'single_model_orm.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
[29/Mar/2021 19:45:34] "GET / HTTP/1.1" 200 16348
[29/Mar/2021 19:45:34] "GET /static/admin/css/fonts.css HTTP/1.1" 200 423
[29/Mar/2021 19:45:34] "GET /static/admin/fonts/Roboto-Bold-webfont.woff HTTP/1.1" 200 86184
[29/Mar/2021 19:45:34] "GET /static/admin/fonts/Roboto-Light-webfont.woff HTTP/1.1" 200 85692
[29/Mar/2021 19:45:34] "GET /static/admin/fonts/Roboto-Regular-webfont.woff HTTP/1.1" 200 85876

(p3VE) C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals\single_model_orm>python manage.py startapp users_app

(p3VE) C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals\single_model_orm>python manage.py runserver
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 17 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
March 29, 2021 - 19:52:45
Django version 2.2, using settings 'single_model_orm.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
[29/Mar/2021 19:52:53] "GET / HTTP/1.1" 200 20
C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals\single_model_orm\users_app\models.py changed, reloading.
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 17 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
March 29, 2021 - 19:55:16
Django version 2.2, using settings 'single_model_orm.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals\single_model_orm\users_app\models.py changed, reloading.
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 17 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
March 29, 2021 - 19:59:41
Django version 2.2, using settings 'single_model_orm.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals\single_model_orm\users_app\models.py changed, reloading.
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).

You have 17 unapplied migration(s). Your project may not work properly until you apply the migrations for app(s): admin, auth, contenttypes, sessions.
Run 'python manage.py migrate' to apply them.
March 29, 2021 - 20:21:25
Django version 2.2, using settings 'single_model_orm.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
[29/Mar/2021 20:23:00] "GET / HTTP/1.1" 200 20
[29/Mar/2021 20:23:00] "GET / HTTP/1.1" 200 20

(p3VE) C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals\single_model_orm>python manage.py makemigrations
Migrations for 'users_app':
  users_app\migrations\0001_initial.py
    - Create model User

(p3VE) C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals\single_model_orm>python manage.py migrate       
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, sessions, users_app
Running migrations:
  Applying contenttypes.0001_initial... OK
  Applying auth.0001_initial... OK
  Applying admin.0001_initial... OK
  Applying admin.0002_logentry_remove_auto_add... OK
  Applying admin.0003_logentry_add_action_flag_choices... OK
  Applying contenttypes.0002_remove_content_type_name... OK
  Applying auth.0002_alter_permission_name_max_length... OK
  Applying auth.0003_alter_user_email_max_length... OK
  Applying auth.0004_alter_user_username_opts... OK
  Applying auth.0005_alter_user_last_login_null... OK
  Applying auth.0006_require_contenttypes_0002... OK
  Applying auth.0007_alter_validators_add_error_messages... OK
  Applying auth.0008_alter_user_username_max_length... OK
  Applying auth.0009_alter_user_last_name_max_length... OK
  Applying auth.0010_alter_group_name_max_length... OK
  Applying auth.0011_update_proxy_permissions... OK
  Applying sessions.0001_initial... OK
  Applying users_app.0001_initial... OK

(p3VE) C:\Users\MyRig\Desktop\CodingDojo\python_stack\django\django_fundamentals\single_model_orm>python manage.py shell  
Python 3.9.2 (tags/v3.9.2:1a79785, Feb 19 2021, 13:44:55) [MSC v.1928 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from users_app.models import *
>>> User.objects.create(first_name='Tom', last_name='Thompson', email_address='tom@gmail.com', age=30)
<User: Tom Thompson>
>>> User.objects.create(first_name='Jim', last_name='Johnson', email_address='jim@gmail.com', age=35)          
<User: Jim Johnson>
>>> User.objects.create(first_name='Dan', last_name='Daniels', email_address='dan@gmail.com', age=40)   
<User: Dan Daniels>
>>> User.objects.all()
<QuerySet [<User: Tom Thompson>, <User: Jim Johnson>, <User: Dan Daniels>]>
>>> User.objects.last()
<User: Dan Daniels>
>>> User.objects.first() 
<User: Tom Thompson>
>>> User.objects.get(id=2)
<User: Jim Johnson>
>>> User.objects.get(id=3) 
<User: Dan Daniels>
>>> Dan = User.objects.get(id=3)
>>> dan.id 
Traceback (most recent call last):
  File "<console>", line 1, in <module>
NameError: name 'dan' is not defined
>>> Dan.id
3
>>> Dan.last_name = 
  File "<console>", line 1
    Dan.last_name =
                    ^
SyntaxError: invalid syntax
>>> Dan.last_name = 'Pancakes'
>>> Dan.save()
>>> User.objects.all()
<QuerySet [<User: Tom Thompson>, <User: Jim Johnson>, <User: Dan Pancakes>]>
>>> User.objects.get(id=2).delete()
(1, {'users_app.User': 1})
>>> User.objects.all()
<QuerySet [<User: Tom Thompson>, <User: Dan Pancakes>]>
>>> User.objects.order_by('first_name')
<QuerySet [<User: Dan Pancakes>, <User: Tom Thompson>]>
>>> User.objects.order_by('-first_name')
<QuerySet [<User: Tom Thompson>, <User: Dan Pancakes>]>
>>> User.objects.all()
<QuerySet [<User: Tom Thompson>, <User: Dan Pancakes>]>
>>> User.objects.order_by('first_name')
<QuerySet [<User: Dan Pancakes>, <User: Tom Thompson>]>
>>> User.objects.order_by('-first_name')
<QuerySet [<User: Tom Thompson>, <User: Dan Pancakes>]>
>>>